align the buttons correctly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -246,11 +246,12 @@ a.city-title:hover {
 
 	h2 {
 		padding: 2em;
-		margin: 0;
+		margin: 0 auto 0 0;
 
 		font-family: $h1-font;
 		letter-spacing: .2em;
 		font-size: 1.25em;
+		line-height: 1.45em;
 		text-transform: uppercase;
 		display: inline-block;
 		align-self: flex-start;
@@ -387,5 +388,12 @@ a.city-title:hover {
 		a {
 			color: $lightgrey !important;
 		}
+	}
+}
+
+@media (max-width: 768px) {
+	.experience h2,
+	.dresses h2 {
+		font-size: 1em !important;
 	}
 }
